# summer_school_2025

./: README.md
cube_det/: CMakeLists.txt  README.md  package.xml
cube_det/include/: line_fill.hpp  line_segment.hpp  test_fitting.hpp
cube_det/scripts/: path_confer.py  test.py
cube_det/src/: cube_det.cpp  line_det.cpp
handpose_det/scripts/: handpose_det.py
limo_opencv/: CMakeLists.txt  package.xml
limo_opencv/scripts/: camera_publisher.py  edge_img.py  feature_dete_img.py  get_img.py  get_video.py  gray_img.py  read_img.py  rgb2hsv.py  rotation_img.py  segm_img.py
mobile_aloha_sim/: README.md
mobile_aloha_sim/piper_description/urdf/: piper_description_v100_camera.urdf
mobile_aloha_sim/split_aloha_mid_360/: CMakeLists.txt  package.xml
mobile_aloha_sim/split_aloha_mid_360/launch/: display.launch  display_ranger_mini.launch  display_xacro.launch  gazebo.launch
mobile_aloha_sim/split_aloha_mid_360/meshes/: base_link_底盘轮子.dae  front_camera_link.STL  front_camera_link.dae  lidar_link.STL  lifting_link.STL  lifting_link.dae  lifting_link_box.STL  lifting_link_box.dae  steering_wheel.dae  top_camera_link.STL  top_camera_link.dae  top_camera_link_back.STL  top_camera_link_back.dae  wheel.dae  wheel_v3.dae
mobile_aloha_sim/split_aloha_mid_360/rviz/: display.rviz
mobile_aloha_sim/split_aloha_mid_360/urdf/: ranger_mini.xacro  split_aloha_mid_360.csv  split_aloha_mid_360.urdf  split_aloha_mid_360.xacro  split_aloha_mid_360_with_piper.urdf  split_aloha_mid_360_with_piper.xacro  split_aloha_rslidar.xacro  split_aloha_rslidar_with_piper.urdf  split_aloha_rslidar_with_piper.xacro
piper_camera_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
piper_camera_moveit_config/config/: fake_controllers.yaml  gazebo.xacro  joint_limits.yaml  ompl_planning.yaml  piper_camera.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml
piper_camera_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
piper_learnning/: CMakeLists.txt  package.xml
piper_learnning/scripts/: moveit_cartesian_path.py  moveit_circular_arc.py  moveit_joint.py  moveit_more_target_point.py  moveit_polt.py  moveit_random.py  moveit_target_point.py  moveit_two_plans.py
piper_learnning/src/: add_collision_objct.cpp  check_collision.cpp  moveit_cartesian_path.cpp  moveit_circular_arc.cpp  moveit_joint.cpp  moveit_more_target_point.cpp  moveit_polt.cpp  moveit_random.cpp  moveit_target_point.cpp  moveit_two_plans.cpp
piper_pick/: CMakeLists.txt  package.xml
piper_pick/launch/: agx_ar_pose.launch  open_camera.launch  visual_grab.launch
piper_pick/scripts/: get_yolo_marker.py  joint_control.py  visual_grab.py  yolo_visual_grab.py
tensorrtx_yolov8_ros/: CMakeLists.txt  README.md
tensorrtx_yolov8_ros/launch/: yolov8n-seg.launch
tensorrtx_yolov8_ros/src/: yolov8_seg.cpp
